added route to get events for businesses a user is a member of
